--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,85 @@
-transformers==4.3.2
-pytorch-lightning==1.2.4
-torch==1.8.0
+absl-py==2.0.0
+addict==2.4.0
+aiohttp==3.8.6
+aiosignal==1.3.1
+async-timeout==4.0.3
+asynctest==0.13.0
+attrs==23.1.0
+cachetools==5.3.2
+certifi @ file:///croot/certifi_1671487769961/work/certifi
+charset-normalizer==3.3.1
+click==8.1.7
 datasets==1.3.0
+decord==0.6.0
+dill==0.3.7
+einops==0.6.1
+ffmpeg-python==0.2.0
+filelock==3.12.2
+frozenlist==1.3.3
+fsspec==2023.1.0
+ftfy==6.1.1
+future==0.18.3
+google-auth==2.23.3
+google-auth-oauthlib==0.4.6
+grpcio==1.59.0
+huggingface-hub==0.16.4
+idna==3.4
+importlib-metadata==6.7.0
+install==1.3.5
+jieba==0.42.1
+joblib==1.3.2
+llvmlite==0.39.1
+Markdown==3.4.4
+MarkupSafe==2.1.3
+mmcv-full==1.7.1
+more-itertools==9.1.0
+multidict==6.0.4
+multiprocess==0.70.15
+nltk==3.8.1
+numba==0.56.4
+numpy==1.21.6
+oauthlib==3.2.2
+openai-whisper==20230124
+opencv-python==4.8.1.78
+packaging==21.3
+pandas==1.3.5
+Pillow==9.5.0
+platformdirs==3.11.0
+protobuf==3.20.3
+pyarrow==12.0.1
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pyparsing==3.1.1
+python-dateutil==2.8.2
+pytorch-lightning==1.2.4
+pytz==2023.3.post1
+PyYAML==6.0.1
+regex==2023.10.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+rouge-chinese==1.0.3
+rouge-score==0.1.2
+rsa==4.9
+sacremoses==0.0.53
+safetensors==0.4.0
+six==1.16.0
+tensorboard==2.11.2
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+timm==0.9.7
+tokenizers==0.10.3
+tomli==2.0.1
+torch==1.11.0
+torchvision==0.12.0
+tqdm==4.49.0
+transformers==4.3.2
+triton==2.1.0
+typing_extensions==4.7.1
+urllib3==2.0.7
+wcwidth==0.2.9
+Werkzeug==2.2.3
+xxhash==3.4.1
+yapf==0.40.2
+yarl==1.9.2
+zhconv==1.4.3
+zipp==3.15.0
