--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,12 +12,12 @@
             },
             "args": [
                 "-model=multi_modal_bart",
-                "-train_src_path=/home/zehong/dataset/How2/text/sum_train/tran.tok.txt",
-                "-train_tgt_path=/home/zehong/dataset/How2/text/sum_train/desc.tok.txt",
-                "-val_src_path=/home/zehong/dataset/How2/text/sum_cv/tran.tok.txt",
-                "-val_tgt_path=/home/zehong/dataset/How2/text/sum_cv/desc.tok.txt",
-                "-test_src_path=/home/zehong/dataset/How2/text/sum_devtest/tran.tok.txt",
-                "-test_tgt_path=/home/zehong/dataset/How2/text/sum_devtest/desc.tok.txt",
+                "-train_src_path=/home/zehong/Desktop/NLP/VG-SUM/data/train.csv",
+                "-train_tgt_path=/home/zehong/Desktop/NLP/VG-SUM/data/train.csv",
+                "-val_src_path=/home/zehong/Desktop/NLP/VG-SUM/data/val.csv",
+                "-val_tgt_path=/home/zehong/Desktop/NLP/VG-SUM/data/val.csv",
+                "-test_src_path=/home/zehong/Desktop/NLP/VG-SUM/data/test.csv",
+                "-test_tgt_path=/home/zehong/Desktop/NLP/VG-SUM/data/test.csv",
                 "-image_feature_path=/home/zehong/dataset/How2/video_action_features/",
                 "-val_save_file=/home/zehong/Desktop/NLP/VG-GPLMs/evaluation/temp_valid_file",
                 "-test_save_file=/home/zehong/Desktop/NLP/VG-GPLMs/evaluation/results/summaries.txt",
