修改数据读取方式

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,13 +11,13 @@
                 "TORCH_DISTRIBUTED_DEBUG": "DETAIL"
             },
             "args": [
-                "-model=multi_modal_bart",
-                "-train_src_path=/home/zehong/Desktop/NLP/VG-SUM/data/train.csv",
-                "-train_tgt_path=/home/zehong/Desktop/NLP/VG-SUM/data/train.csv",
-                "-val_src_path=/home/zehong/Desktop/NLP/VG-SUM/data/val.csv",
-                "-val_tgt_path=/home/zehong/Desktop/NLP/VG-SUM/data/val.csv",
-                "-test_src_path=/home/zehong/Desktop/NLP/VG-SUM/data/test.csv",
-                "-test_tgt_path=/home/zehong/Desktop/NLP/VG-SUM/data/test.csv",
+                "-model=text_only_bart",
+                "-train_src_path=/home/zehong/Desktop/NLP/VG-SUM/data/DemoSum.csv",
+                "-train_tgt_path=/home/zehong/Desktop/NLP/VG-SUM/data/DemoSum.csv",
+                "-val_src_path=/home/zehong/Desktop/NLP/VG-SUM/data/DemoSum.csv",
+                "-val_tgt_path=/home/zehong/Desktop/NLP/VG-SUM/data/DemoSum.csv",
+                "-test_src_path=/home/zehong/Desktop/NLP/VG-SUM/data/DemoSum.csv",
+                "-test_tgt_path=/home/zehong/Desktop/NLP/VG-SUM/data/DemoSum.csv",
                 "-image_feature_path=/home/zehong/dataset/How2/video_action_features/",
                 "-val_save_file=/home/zehong/Desktop/NLP/VG-GPLMs/evaluation/temp_valid_file",
                 "-test_save_file=/home/zehong/Desktop/NLP/VG-GPLMs/evaluation/results/summaries.txt",
