--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,16 +12,16 @@
             },
             "args": [
                 "-model=text_only_bart",
-                "-train_src_path=/home/zehong/Desktop/NLP/VG-SUM/data/demo.csv",
-                "-train_tgt_path=/home/zehong/Desktop/NLP/VG-SUM/data/demo.csv",
-                "-val_src_path=/home/zehong/Desktop/NLP/VG-SUM/data/demo.csv",
-                "-val_tgt_path=/home/zehong/Desktop/NLP/VG-SUM/data/demo.csv",
-                "-test_src_path=/home/zehong/Desktop/NLP/VG-SUM/data/demo.csv",
-                "-test_tgt_path=/home/zehong/Desktop/NLP/VG-SUM/data/demo.csv",
+                "-train_src_path=/home/zehong/Project/VG-SUM/data/demo_desc.txt",
+                "-train_tgt_path=/home/zehong/Project/VG-SUM/data/demo_summary.txt",
+                "-val_src_path=/home/zehong/Project/VG-SUM/data/demo_desc.txt",
+                "-val_tgt_path=/home/zehong/Project/VG-SUM/data/demo_summary.txt",
+                "-test_src_path=/home/zehong/Project/VG-SUM/data/demo_desc.txt",
+                "-test_tgt_path=/home/zehong/Project/VG-SUM/data/demo_summary.txt",
                 "-image_feature_path=/home/zehong/dataset/How2/video_action_features/",
-                "-val_save_file=/home/zehong/Desktop/NLP/VG-GPLMs/evaluation/temp_valid_file",
+                "-val_save_file=/home/zehong/Project/VG-SUM/evaluation/temp_valid_file",
                 "-test_save_file=/home/zehong/Desktop/NLP/VG-GPLMs/evaluation/results/summaries.txt",
-                "-log_name=multi_modal_bart",
+                "-log_name=Bart_text_only",
                 "-gpus='0'",
                 "-batch_size=4",
                 "-learning_rate=3e-5",
