--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,17 +11,17 @@
                 "TORCH_DISTRIBUTED_DEBUG": "DETAIL"
             },
             "args": [
-                "-model=text_only_bart",
+                "-model=multi_modal_bart",
                 "-train_src_path=/home/zehong/Project/VG-SUM/data/demo_desc.txt",
                 "-train_tgt_path=/home/zehong/Project/VG-SUM/data/demo_summary.txt",
                 "-val_src_path=/home/zehong/Project/VG-SUM/data/demo_desc.txt",
                 "-val_tgt_path=/home/zehong/Project/VG-SUM/data/demo_summary.txt",
                 "-test_src_path=/home/zehong/Project/VG-SUM/data/demo_desc.txt",
                 "-test_tgt_path=/home/zehong/Project/VG-SUM/data/demo_summary.txt",
-                "-image_feature_path=/home/zehong/dataset/How2/video_action_features/",
+                "-image_feature_path=/home/zehong/Project/VG-SUM/data/video_action_features/",
                 "-val_save_file=/home/zehong/Project/VG-SUM/evaluation/temp_valid_file",
                 "-test_save_file=/home/zehong/Desktop/NLP/VG-GPLMs/evaluation/results/summaries.txt",
-                "-log_name=Bart_text_only",
+                "-log_name=multi_modal_bart",
                 "-gpus='0'",
                 "-batch_size=4",
                 "-learning_rate=3e-5",
@@ -42,6 +42,7 @@
                 "-checkpoint=None",
                 "-use_forget_gate",
                 "-cross_attn_type=0",
+                "-use_img_trans" 
             ],
             "console": "integratedTerminal",
             "cwd": "${workspaceFolder}"
